PLIB-2507 fix overflow issue for code snippets

--- a/docs/.vuepress/theme/styles/theme.scss
+++ b/docs/.vuepress/theme/styles/theme.scss
@@ -87,8 +87,7 @@ div[class^='language-'] {
   font-size: 14px;
   line-height: 1.4;
   padding: $inset-1-x;
-  max-width: 100%;
-  overflow-x: auto;
+  overflow: auto;
   position: relative;
 
   .cdr-doc-code-snippet__actions + & {
